--- a/lagrangian_integrator/lagrangian_integrator.ipynb
+++ b/lagrangian_integrator/lagrangian_integrator.ipynb
@@ -613,14 +613,14 @@
     "\n",
     "def fun(t, y):\n",
     "    #note that here y refers to both x and y coords\n",
-    "    coords = np.array([t, y[0], y[1]])\n",
+    "    coords = np.array([t, [sublist[0] for sublist in y], [sublist[1] for sublist in y]])\n",
     "    dxdt = polynomial_u(coords)\n",
     "    dydt = polynomial_v(coords)\n",
     "    return [dxdt, dydt]\n",
     "\n",
     "def funconc(t, y):\n",
-    "    y\n",
-    "    \n",
+    "    coords = np.array([t, [sublist[0] for sublist in y], [sublist[1] for sublist in y]])\n",
+    "\n",
     "    dcdt = -y[0] * (deriv_poly_u(coords) + deriv_poly_v(coords))\n",
     "\n",
     "\n",
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
        "[[0, 1], [0, 1], [0, 1], [0, 1], [0, 1], [0, 1], [0, 1]]"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +653,8 @@
     "np.zeros((num_steps+1, num_particles, 2))[0]\n",
     "np.zeros((7,2))[0]\n",
     "positions = [0,1],[0,1],[0,1],[0,1],[0,1],[0,1],[0,1],[0,1]\n",
-    "[ [positions[i][0], positions[i][1]] for i in range(num_particles)]"
+    "a = [[positions[i][0], positions[i][1]] for i in range(7)]\n",
+    "a"
    ]
   }
  ],
