--- a/lagrangian_integrator/lagrangian_integrator.ipynb
+++ b/lagrangian_integrator/lagrangian_integrator.ipynb
@@ -583,7 +583,9 @@
     "    #concentration\n",
     "    y0conc = [ [concentrations][i], positions[i][0], positions[i][1] for i in range(num_particles)] #returns conc and then pos\n",
     "    solconc = solve_ivp(funconc, t_span, y0, t_eval = t_eval)\n",
-    "\n",
+    "    positionsconc = solconc.y.T\n",
+    "    for i in range(num_steps):\n",
+    "        concentrations_over_time[i+1] = positionsconc[i+1]\n",
     "    return positions_over_time, concentrations_over_time\n",
     "\n",
     "\n",
@@ -622,10 +624,21 @@
     "    coords = np.array([t, [sublist[0] for sublist in y], [sublist[1] for sublist in y]])\n",
     "\n",
     "    dcdt = -y[0] * (deriv_poly_u(coords) + deriv_poly_v(coords))\n",
-    "\n",
-    "\n",
     "    return [dcdt, 0, 0]\n",
     "\n",
+    "def deriv_poly_u():\n",
+    "    mat = u\n",
+    "    nt, nx, ny = u.shape\n",
+    "    for i in range(nt):\n",
+    "        mat[i] = np.gradient(velocity_field[i], axis=0)\n",
+    "    return interpolate(mat)\n",
+    "\n",
+    "def deriv_poly_v():\n",
+    "    mat = u\n",
+    "    nt, nx, ny = v.shape\n",
+    "    for i in range(nt):\n",
+    "        mat[i] = np.gradient(velocity_field[i], axis=1)\n",
+    "    return interpolate(mat)\n",
     "\n",
     "\n",
     "\n"
