--- a/lagrangian_integrator/lagrangian_integrator.ipynb
+++ b/lagrangian_integrator/lagrangian_integrator.ipynb
@@ -525,7 +525,7 @@
     "\n",
     "#We expect a velocity field such that velocity_field[i] gives the matrix at time i\n",
     "\n",
-    "def integrate_particles(positions, concentrations, velocity_field, num_steps, dt):\n",
+    "def integrate_particles(positions, concentrations, velocity_field, dt, num_steps):\n",
     "    \"\"\"\n",
     "    Integrates Lagrangian particles with concentrations using the unfreezing method.\n",
     "    \n",
