--- a/lagrangian_integrator/lagrangian_integrator.ipynb
+++ b/lagrangian_integrator/lagrangian_integrator.ipynb
@@ -432,23 +432,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "import numpy as np  \n",
     "from scipy.interpolate import RegularGridInterpolator\n",
     "\n",
     "def integrate_particles(positions, concentrations, k, l, A, omega, phi dt, num_steps):\n",
-    "    \"\"\"\n",
-    "    Integrates Lagrangian particles with concentrations using the unfreezing method.\n",
     "    \n",
-    "    Parameters:\n",
-    "        positions (numpy.ndarray): Initial positions of the particles. Shape: (num_particles, 3).\n",
-    "        concentrations (numpy.ndarray): Initial concentrations of the particles. Shape: (num_particles,).\n",
-    "        velocity_field (function): Time-dependent velocity field function that takes position and time as arguments.\n",
-    "        dt (float): Time step size.\n",
-    "        num_steps (int): Number of integration steps to perform.\n",
-    "    \n",
-    "    Returns:\n",
-    "        Tuple[numpy.ndarray, numpy.ndarray]: Arrays of particle positions and concentrations over time.\n",
-    "    \"\"\"\n",
     "    num_particles = len(positions)\n",
     "    positions_over_time = np.zeros((num_steps+1, num_particles, 2))  # Array to store particle positions\n",
     "    concentrations_over_time = np.zeros((num_steps+1, num_particles))  # Array to store particle concentrations\n",
@@ -477,17 +465,6 @@
     "    return positions_over_time, concentrations_over_time\n",
     "\n",
     "def analytical_velocity(positions, k, l, A, omega, phi, time):\n",
-    "    \"\"\"\n",
-    "    Interpolates the velocities at given positions using the velocity field.\n",
-    "    \n",
-    "    Parameters:\n",
-    "        positions (numpy.ndarray): Positions of the particles. Shape: (num_particles, 3).\n",
-    "        velocity_field (function): Time-dependent velocity field function.\n",
-    "    \n",
-    "    Returns:\n",
-    "        numpy.ndarray: Interpolated velocities at the given positions. Shape: (num_particles, 3).\n",
-    "    \"\"\"\n",
-    "\n",
     "    #generate a 2d array with the x and y velocities respectively for an individual point\n",
     "    def velocity_at_point(x, y, t):\n",
     "        streamfunction = A * np.exp(1j(k*x + l*y - omega*t + phi))\n",
@@ -519,34 +496,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from scipy.interpolate import RegularGridInterpolator\n",
+    "import numpy as np \n",
+    "import itertools\n",
+    "from scipy.interpolate import interpn\n",
     "from scipy.integrate import solve_ivp\n",
     "\n",
     "#We expect a velocity field such that velocity_field[i] gives the matrix at time i\n",
     "\n",
-    "def integrate_particles(positions, concentrations, velocity_field, dt, num_steps):\n",
-    "    \"\"\"\n",
-    "    Integrates Lagrangian particles with concentrations using the unfreezing method.\n",
-    "    \n",
-    "    Parameters:\n",
-    "        positions (numpy.ndarray): Initial positions of the particles. Shape: (num_particles, 2).\n",
-    "        concentrations (numpy.ndarray): Initial concentrations of the particles. Shape: (num_particles,).\n",
-    "        velocity_field (function): Time-dependent velocity field function that takes position and time as arguments.\n",
-    "        dt (float): Time step size.\n",
-    "        num_steps (int): Number of integration steps to perform.\n",
-    "    \n",
-    "    Returns:\n",
-    "        Tuple[numpy.ndarray, numpy.ndarray]: Arrays of particle positions and concentrations over time.\n",
-    "    \"\"\"\n",
+    "def integrate_particles(positions, concentrations, velocity_field, X, Y, dt, num_steps):\n",
     "    #num_steps = np.shape(velocity_field)[0] - 1 \n",
     "    num_particles = len(positions)\n",
     "    positions_over_time = np.zeros((num_steps+1, num_particles, 2))  # Array to store particle positions\n",
-    "    concentrations_over_time = np.zeros((num_steps+1, num_particles))  # Array to store particle concentrations\n",
+    "    concentrations_over_time = np.zeros((num_steps+1, num_particles, 1))  # Array to store particle concentrations\n",
     "    \n",
     "    # Set initial positions and concentrations\n",
     "    positions_over_time[0] = positions\n",
     "    concentrations_over_time[0] = concentrations\n",
+    "    L = 3\n",
     "    \n",
     "    #use a polynomial to approximate -note that we must ignore phi for this\n",
     "    #once we have a polynomial we just use solve ivp\n",
@@ -565,14 +531,13 @@
     "    polynomial_u, polynomial_v = interpolate(u), interpolate(v) \n",
     "    t_span = (0, num_steps * dt)\n",
     "    t_eval = [i * dt for i in range(num_steps+1)] #should go from 0 to t_span\n",
-    "    positions # should be of form numberofparticles * 2\n",
+    "    #positions # should be of form numberofparticles * 2\n",
     "    y0 = [ [positions[i][0], positions[i][1]] for i in range(num_particles)]\n",
     "    #y0_list = [\n",
     "    #    [1, 0],  # Particle 1 initial position [x1, y1]\n",
     "    #    [2, 0],  # Particle 2 initial position [x2, y2]\n",
     "    #    [3, 0]   # Particle 3 initial position [x3, y3]\n",
     "    #]\n",
-    "\n",
     "    # work out trajectory of each particle or can do all at once in vector form?\n",
     "    sol = solve_ivp(fun, t_span, y0, t_eval = t_eval)\n",
     "    positions = sol.y.T\n",
@@ -581,7 +546,7 @@
     "        positions_over_time[i+1] = positions[i+1]\n",
     "\n",
     "    #concentration\n",
-    "    y0conc = [ [concentrations][i], positions[i][0], positions[i][1] for i in range(num_particles)] #returns conc and then pos\n",
+    "    y0conc = [ [[concentrations][i], positions[i][0], positions[i][1]] for i in range(num_particles)] #returns conc and then pos\n",
     "    solconc = solve_ivp(funconc, t_span, y0, t_eval = t_eval)\n",
     "    positionsconc = solconc.y.T\n",
     "    for i in range(num_steps):\n",
@@ -603,7 +568,7 @@
     "        vmatrix[i] = np.gradient(velocity_field[i], axis=0) \n",
     "    return vmatrix\n",
     "\n",
-    "def interpolate(umatrix):\n",
+    "#def interpolate(umatrix):\n",
     "    t_vals = np.arange(umatrix.shape[0])\n",
     "    x_vals = np.arange(umatrix.shape[1])\n",
     "    y_vals = np.arange(umatrix.shape[2])\n",
@@ -613,16 +578,37 @@
     "    interpolator = RegularGridInterpolator((t_vals, x_vals, y_vals), values, method='cubic')\n",
     "    return interpolator\n",
     "\n",
+    "def interpolate(umatrix):\n",
+    "\n",
+    "    #X_expanded = np.repeat(X, num_steps+1)\n",
+    "    #Y_expanded = np.repeat(Y, num_steps+1)\n",
+    "    #M = len(X_expanded) * len(Y_expanded)\n",
+    "    #time = [i for k in range(num_steps + 1)]\n",
+    "    #timearray = np.array(time)  \n",
+    "    #time_expanded = np.repeat(timearray, M)\n",
+    "    #time_expanded = np.tile(time_expanded, M)\n",
+    "\n",
+    "    grid = np.meshgrid(time, X, Y, indexing='ij', sparse=True)\n",
+    "    z_interp = interpn(grid, umatrix, (time, X, Y), method='cubic')\n",
+    "\n",
+    "    return z_interp\n",
+    "\n",
     "def fun(t, y):\n",
     "    #note that here y refers to both x and y coords\n",
-    "    coords = np.array([t, [sublist[0] for sublist in y], [sublist[1] for sublist in y]])\n",
-    "    dxdt = polynomial_u(coords)\n",
+    "    xlist = [sublist[0] for sublist in y] % L\n",
+    "    ylist = [sublist[1] for sublist in y] % L\n",
+    "    coords = np.array([t*np.ones(num_particles), np.array(xlist).reshape(-1, 1), np.array(ylist).reshape(-1, 1)])\n",
+    "    #make mod L\n",
+    "\n",
+    "    dxdt = polynomial_u(coords) \n",
     "    dydt = polynomial_v(coords)\n",
     "    return [dxdt, dydt]\n",
     "\n",
     "def funconc(t, y):\n",
-    "    coords = np.array([t, [sublist[0] for sublist in y], [sublist[1] for sublist in y]])\n",
-    "\n",
+    "    #note that here y refers to both x and y coords\n",
+    "    xlist = [sublist[0] for sublist in y] % L\n",
+    "    ylist = [sublist[1] for sublist in y] % L\n",
+    "    coords = np.array([t*np.ones(num_particles), np.array(xlist).reshape(-1, 1), np.array(ylist).reshape(-1, 1)])\n",
     "    dcdt = -y[0] * (deriv_poly_u(coords) + deriv_poly_v(coords))\n",
     "    return [dcdt, 0, 0]\n",
     "\n",
@@ -646,28 +632,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[0, 1], [0, 1], [0, 1], [0, 1], [0, 1], [0, 1], [0, 1]]"
+       "array([[[0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.]],\n",
+       "\n",
+       "       [[0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.]]])"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "num_steps = 2\n",
     "num_particles = 7\n",
     "np.zeros((num_steps+1, num_particles, 2))[0]\n",
     "np.zeros((7,2))[0]\n",
     "positions = [0,1],[0,1],[0,1],[0,1],[0,1],[0,1],[0,1],[0,1]\n",
     "a = [[positions[i][0], positions[i][1]] for i in range(7)]\n",
-    "a"
+    "a\n",
+    "\n",
+    "\n",
+    "\n",
+    "matrix = np.array([\n",
+    "    [[1, 2, 3],\n",
+    "     [4, 5, 6],\n",
+    "     [7, 8, 9]],\n",
+    "\n",
+    "    [[10, 11, 12],\n",
+    "     [13, 14, 15],\n",
+    "     [16, 17, 18]],\n",
+    "\n",
+    "    [[19, 20, 21],\n",
+    "     [22, 23, 24],\n",
+    "     [25, 26, 27]]\n",
+    "])\n",
+    "matrix[0]\n",
+    "\n",
+    "\n",
+    "\n",
+    "np.zeros((2, num_particles, 1))\n",
+    "#np.zeros((num_steps+1, num_particles, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.69435328, 0.25986731, 0.90529184, 0.0150143 , 0.53760868],\n",
+       "        [0.83358151, 0.27456937, 0.30443565, 0.62342627, 0.97369132],\n",
+       "        [0.80590368, 0.52490854, 0.74805008, 0.00644228, 0.39687837],\n",
+       "        [0.11850804, 0.3248103 , 0.86649319, 0.82262829, 0.27578867],\n",
+       "        [0.27712964, 0.26899352, 0.62881432, 0.59125746, 0.39041595]],\n",
+       "\n",
+       "       [[0.47673063, 0.44568182, 0.91797546, 0.08883136, 0.09058082],\n",
+       "        [0.56738682, 0.37872632, 0.02255407, 0.24457622, 0.74403955],\n",
+       "        [0.35817771, 0.74243044, 0.65902043, 0.77460534, 0.44461956],\n",
+       "        [0.92309432, 0.12039433, 0.5310399 , 0.45312112, 0.08849089],\n",
+       "        [0.71557988, 0.29096745, 0.22952658, 0.42276309, 0.6796236 ]],\n",
+       "\n",
+       "       [[0.26344902, 0.33908524, 0.57024649, 0.08871039, 0.39794508],\n",
+       "        [0.85040249, 0.38843825, 0.38137556, 0.91277023, 0.81601941],\n",
+       "        [0.47116793, 0.56175788, 0.53018641, 0.69693781, 0.29624053],\n",
+       "        [0.70827025, 0.19409976, 0.63210454, 0.20351009, 0.15323493],\n",
+       "        [0.18529643, 0.14213004, 0.92392597, 0.69803822, 0.7413483 ]],\n",
+       "\n",
+       "       [[0.53051045, 0.72599711, 0.60492415, 0.11349886, 0.60588004],\n",
+       "        [0.01980524, 0.13533388, 0.08024826, 0.12099445, 0.72266875],\n",
+       "        [0.11119483, 0.69998937, 0.79830224, 0.15589878, 0.32220112],\n",
+       "        [0.34861378, 0.42357364, 0.14175445, 0.94829489, 0.16524285],\n",
+       "        [0.55453102, 0.44648796, 0.00897748, 0.73050994, 0.87251029]],\n",
+       "\n",
+       "       [[0.1565707 , 0.30798439, 0.07966281, 0.20000744, 0.26749189],\n",
+       "        [0.93720942, 0.70485861, 0.3323084 , 0.06168488, 0.36741703],\n",
+       "        [0.25896072, 0.40154582, 0.74501972, 0.87673605, 0.9996748 ],\n",
+       "        [0.86132257, 0.81476232, 0.01670118, 0.37453359, 0.29203884],\n",
+       "        [0.25493579, 0.01185524, 0.58550196, 0.44358122, 0.84846029]]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.random((5, 5, 5)) \n"
    ]
   }
  ],
