--- a/Lagr_autocorrelation/Lagr_autocorrelation.ipynb
+++ b/Lagr_autocorrelation/Lagr_autocorrelation.ipynb
@@ -40,6 +40,7 @@
     "\n",
     "#correlation list\n",
     "correlation_list = []\n",
+    "squared_disp_list = []\n",
     "for time in time_steps_list:\n",
     "    for sol in solutions:\n",
     "        t_list = sol.t\n",
@@ -54,16 +55,18 @@
     "        \n",
     "        dx = new_x - initial_x\n",
     "        dy = new_y - initial_y\n",
-    "        autocorrelation = np.mean(dx*dx + dy*dy)\n",
+    "        squared_disp = dx*dx + dy*dy #for each particle, we calculate squared displacement\n",
+    "        squared_disp_list.append(squared_disp)\n",
     "        \n",
-    "    correlation_list.append(autocorrelation)\n",
+    "    correlation_list.append(np.mean(squared_disp_list)) #then for each time, we calculate mean of squared displacements over all the particles\n",
     "  \n",
     "\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "ax.plot(time_steps_list, correlation_list)\n",
     "fig.set_size_inches(10, 8)\n",
-    "ax.set_xlim(0,100) #zooms in to get better view of the important part of graph\n",
+    "#ax.set_xlim(5,100)#zooms in to get better view of the important part of graph\n",
+    "#ax.set_ylim(0.6, 0.75)\n",
     "plt.xlabel('Time')\n",
     "plt.ylabel('Correlation')\n",
     "plt.title('Lagrangian Autocorrelation of Particle Tracers')\n",
