--- a/Lagr_autocorrelation/Lagr_autocorrelation.ipynb
+++ b/Lagr_autocorrelation/Lagr_autocorrelation.ipynb
@@ -38,10 +38,10 @@
     "\n",
     "time_steps_list = range(1, 2001) # Taking values at every integer time, can adjust this.\n",
     "\n",
-    "#correlation list\n",
+    "#start of lang autocorrelation\n",
     "correlation_list = []\n",
-    "squared_disp_list = []\n",
     "for time in time_steps_list:\n",
+    "    squared_disp_list = []\n",
     "    for sol in solutions:\n",
     "        t_list = sol.t\n",
     "        x = sol.y[0]\n",
@@ -65,8 +65,8 @@
     "fig, ax = plt.subplots()\n",
     "ax.plot(time_steps_list, correlation_list)\n",
     "fig.set_size_inches(10, 8)\n",
-    "#ax.set_xlim(5,100)#zooms in to get better view of the important part of graph\n",
-    "#ax.set_ylim(0.6, 0.75)\n",
+    "ax.set_xlim(5,100)#zooms in to get better view of the important part of graph\n",
+    "ax.set_ylim(0.5, 0.6)\n",
     "plt.xlabel('Time')\n",
     "plt.ylabel('Correlation')\n",
     "plt.title('Lagrangian Autocorrelation of Particle Tracers')\n",
