--- a/lagrangian_integrator/new_lagrangian_integrator.ipynb
+++ b/lagrangian_integrator/new_lagrangian_integrator.ipynb
@@ -27,8 +27,13 @@
     "    t = [i*dt for i in range(num_steps+1)]\n",
     "    y0 = positions\n",
     "    vector_rk4(fun, y0, t)\n",
+    "    #concentration starts here\n",
+    "    du, dv = get_matrix_du(u), get_matrix_dv(v)\n",
+    "    polynomial_du, polynomial_dv = interpolate(du), interpolate(dv)\n",
+    "    y0conc = concentrations_over_time\n",
+    "    vector_rk4_conc(funconc, y0conc, t)\n",
     "\n",
-    "    return positions_over_time\n",
+    "    return positions_over_time, concentrations_over_time\n",
     "\n",
     "\n",
     "def get_matrix_u(velocity_field):\n",
@@ -44,6 +49,20 @@
     "    for i in range(nt):\n",
     "        vmatrix[i] = np.gradient(velocity_field[i], axis=0) \n",
     "    return vmatrix\n",
+    "\n",
+    "def get_matrix_du(umatrix):\n",
+    "    dumatrix = umatrix\n",
+    "    nt, nx, ny = umatrix.shape\n",
+    "    for i in range(nt):\n",
+    "        dumatrix[i] = np.gradient(umatrix[i], axis=0) \n",
+    "    return dumatrix\n",
+    "\n",
+    "def get_matrix_dv(umatrix):\n",
+    "    dumatrix = umatrix\n",
+    "    nt, nx, ny = umatrix.shape\n",
+    "    for i in range(nt):\n",
+    "        dumatrix[i] = np.gradient(umatrix[i], axis=1) \n",
+    "    return dumatrix\n",
     "\n",
     "def interpolate(umatrix):\n",
     "\n",
@@ -77,6 +96,22 @@
     "\n",
     "    return result\n",
     "\n",
+    "def funconc(t, y):\n",
+    "    #concentrations of the form np.ones((6, 1))\n",
+    "    #-c (du/dx + dv/dy) = result\n",
+    "    c = y\n",
+    "    xcoords = positions_over_time[t][:, 0]\n",
+    "    xcoords = np.array(xcoords).reshape(-1, 1)\n",
+    "    ycoords = positions_over_time[t][:, 1]\n",
+    "    ycoords = np.array(xcoords).reshape(-1, 1)\n",
+    "    coords = np.array([t*np.ones(num_particles), xcoords, ycoords])\n",
+    "\n",
+    "    dudx = polynomial_du(coords)\n",
+    "    dvdy = polynomial_dv(coords)\n",
+    "    result = -1*c*(dudx + dvdy)\n",
+    "    return result\n",
+    "\n",
+    "\n",
     "def vector_rk4(f, y0, t):\n",
     "    #y0 will be of shape num_particles(N) x 2, same for all k values \n",
     "    #t = [dt, 2dt, 3dt,...]\n",
@@ -84,6 +119,23 @@
     "    n = len(t)\n",
     "    #y = np.zeros((n, len(y0))) #this is positions_over_time\n",
     "    y = positions_over_time\n",
+    "    #y[0] = y0 #we have already set the firstvalue\n",
+    "    for i in range(n - 1):\n",
+    "        h = t[i+1] - t[i]\n",
+    "        k1 = f(t[i], y[i])\n",
+    "        k2 = f(t[i] + 0.5*h, y[i] + 0.5*h*k1)\n",
+    "        k3 = f(t[i] + 0.5*h, y[i] + 0.5*h*k2)\n",
+    "        k4 = f(t[i+1], y[i] + h*k3)\n",
+    "        y[i+1] = y[i] + (h/6)*(k1 + 2*k2 + 2*k3 + k4)\n",
+    "    return y\n",
+    "\n",
+    "def vector_rk4_conc(f, y0, t):\n",
+    "    #y0 will be of shape num_particles(N) x 2, same for all k values \n",
+    "    #t = [dt, 2dt, 3dt,...]\n",
+    "    #f takes a scalar t[i] and a N x 2 array\n",
+    "    n = len(t)\n",
+    "    #y = np.zeros((n, len(y0))) #this is positions_over_time\n",
+    "    y = concentrations_over_time\n",
     "    #y[0] = y0 #we have already set the firstvalue\n",
     "    for i in range(n - 1):\n",
     "        h = t[i+1] - t[i]\n",
