--- a/lagrangian_integrator/new_lagrangian_integrator.ipynb
+++ b/lagrangian_integrator/new_lagrangian_integrator.ipynb
@@ -75,15 +75,17 @@
     "\n",
     "def fun(t, y):\n",
     "    #note that here y refers to both x and y coords\n",
-    "    xlist = [sublist[0] for sublist in y] + L\n",
-    "    ylist = [sublist[1] for sublist in y] + L\n",
-    "    xlist = xlist % 2*L\n",
-    "    ylist = ylist % 2*L\n",
-    "    xlist -= L\n",
-    "    ylist -= L\n",
+    "    #print(y)\n",
+    "    #print(2*L)\n",
+    "    #print([(sublist[0]+L)% (2*L) -L for sublist in y] )\n",
     "\n",
-    "    coords = np.array([t*np.ones(num_particles), np.array(xlist).reshape(-1, 1), np.array(ylist).reshape(-1, 1)])\n",
-    "    #make mod L\n",
+    "    xlist = [(sublist[0]+L)% (2*L) -L for sublist in y] \n",
+    "    ylist = [(sublist[1]+L)% (2*L) -L for sublist in y] \n",
+    "    #print(np.array(xlist).reshape(-1, 1))\n",
+    "    #print(t*np.ones(num_particles))\n",
+    "    timecoords = t*np.ones(num_particles)\n",
+    "\n",
+    "    coords = np.array([np.array(timecoords).reshape(-1, 1), np.array(xlist).reshape(-1, 1), np.array(ylist).reshape(-1, 1)])\n",
     "\n",
     "    dxdt = polynomial_u(coords) \n",
     "    dydt = polynomial_v(coords)\n",
@@ -104,7 +106,8 @@
     "    xcoords = np.array(xcoords).reshape(-1, 1)\n",
     "    ycoords = positions_over_time[t][:, 1]\n",
     "    ycoords = np.array(xcoords).reshape(-1, 1)\n",
-    "    coords = np.array([t*np.ones(num_particles), xcoords, ycoords])\n",
+    "    timecoords = t*np.ones(num_particles)\n",
+    "    coords = np.array([np.array(timecoords).reshape(-1, 1), xcoords, ycoords])\n",
     "\n",
     "    dudx = polynomial_du(coords)\n",
     "    dvdy = polynomial_dv(coords)\n",
