--- a/lagrangian_integrator/new_lagrangian_integrator.ipynb
+++ b/lagrangian_integrator/new_lagrangian_integrator.ipynb
@@ -26,12 +26,12 @@
     "    #y0 = [ [positions[i][0], positions[i][1]] for i in range(num_particles)]\n",
     "    t = [i*dt for i in range(num_steps+1)]\n",
     "    y0 = positions\n",
-    "    vector_rk4(fun, y0, t)\n",
+    "    vector_rk4(fun, y0, t, polynomial_u, polynomial_v)\n",
     "    #concentration starts here\n",
     "    du, dv = get_matrix_du(u), get_matrix_dv(v)\n",
     "    polynomial_du, polynomial_dv = interpolate(du), interpolate(dv)\n",
     "    y0conc = concentrations_over_time\n",
-    "    vector_rk4_conc(funconc, y0conc, t)\n",
+    "    vector_rk4_conc(funconc, y0conc, t, polynomial_du, polynomial_dv)\n",
     "\n",
     "    return positions_over_time, concentrations_over_time\n",
     "\n",
@@ -73,7 +73,58 @@
     "\n",
     "    return interpolator\n",
     "\n",
-    "def fun(t, y):\n",
+    "def funconc(t, y, polynomial_du, polynomial_dv):\n",
+    "    #concentrations of the form np.ones((6, 1))\n",
+    "    #-c (du/dx + dv/dy) = result\n",
+    "    c = y\n",
+    "    xcoords = positions_over_time[t][:, 0]\n",
+    "    xcoords = np.array(xcoords).reshape(-1, 1)\n",
+    "    ycoords = positions_over_time[t][:, 1]\n",
+    "    ycoords = np.array(xcoords).reshape(-1, 1)\n",
+    "    timecoords = t*np.ones(num_particles)\n",
+    "    coords = [[x, y, z] for x, y, z in zip(timecoords, xlist, ylist)]\n",
+    "\n",
+    "    dudx = polynomial_du(coords)\n",
+    "    dvdy = polynomial_dv(coords)\n",
+    "    result = -1*c*(dudx + dvdy)\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "def vector_rk4(f, y0, t, polynomial_u, polynomial_v):\n",
+    "    #y0 will be of shape num_particles(N) x 2, same for all k values \n",
+    "    #t = [dt, 2dt, 3dt,...]\n",
+    "    #f takes a scalar t[i] and a N x 2 array\n",
+    "    n = len(t)\n",
+    "    #y = np.zeros((n, len(y0))) #this is positions_over_time\n",
+    "    y = positions_over_time\n",
+    "    #y[0] = y0 #we have already set the firstvalue\n",
+    "    for i in range(n - 1):\n",
+    "        h = t[i+1] - t[i]\n",
+    "        k1 = f(t[i], y[i], polynomial_u, polynomial_v)\n",
+    "        k2 = f(t[i] + 0.5*h, y[i] + 0.5*h*k1, polynomial_u, polynomial_v)\n",
+    "        k3 = f(t[i] + 0.5*h, y[i] + 0.5*h*k2, polynomial_u, polynomial_v)\n",
+    "        k4 = f(t[i+1], y[i] + h*k3, polynomial_u, polynomial_v)\n",
+    "        y[i+1] = y[i] + (h/6)*(k1 + 2*k2 + 2*k3 + k4)\n",
+    "    return y\n",
+    "\n",
+    "def vector_rk4_conc(f, y0, t, polynomial_du, polynomial_dv):\n",
+    "    #y0 will be of shape num_particles(N) x 2, same for all k values \n",
+    "    #t = [dt, 2dt, 3dt,...]\n",
+    "    #f takes a scalar t[i] and a N x 2 array\n",
+    "    n = len(t)\n",
+    "    #y = np.zeros((n, len(y0))) #this is positions_over_time\n",
+    "    y = concentrations_over_time\n",
+    "    #y[0] = y0 #we have already set the firstvalue\n",
+    "    for i in range(n - 1):\n",
+    "        h = t[i+1] - t[i]\n",
+    "        k1 = f(t[i], y[i], polynomial_du, polynomial_dv)\n",
+    "        k2 = f(t[i] + 0.5*h, y[i] + 0.5*h*k1, polynomial_du, polynomial_dv)\n",
+    "        k3 = f(t[i] + 0.5*h, y[i] + 0.5*h*k2, polynomial_du, polynomial_dv)\n",
+    "        k4 = f(t[i+1], y[i] + h*k3, polynomial_du, polynomial_dv)\n",
+    "        y[i+1] = y[i] + (h/6)*(k1 + 2*k2 + 2*k3 + k4)\n",
+    "    return y\n",
+    "\n",
+    "def fun(t, y, polynomial_u, polynomial_v):\n",
     "    #note that here y refers to both x and y coords\n",
     "    #print(y)\n",
     "    #print(2*L)\n",
@@ -85,8 +136,14 @@
     "    #print(t*np.ones(num_particles))\n",
     "    timecoords = t*np.ones(num_particles)\n",
     "\n",
-    "    coords = np.array([np.array(timecoords).reshape(-1, 1), np.array(xlist).reshape(-1, 1), np.array(ylist).reshape(-1, 1)])\n",
-    "\n",
+    "    #coords = [timecoords, xlist, ylist]\n",
+    "    coords = [[x, y, z] for x, y, z in zip(timecoords, xlist, ylist)]\n",
+    "    #print(coords)\n",
+    "    #a=[[0,1,2],[0,1,2],[0,1,2], [0,1,2]]\n",
+    "    #print(a)\n",
+    "    #print(polynomial_u(a))\n",
+    "    #print(coords)\n",
+    "    #print(polynomial_u(coords))\n",
     "    dxdt = polynomial_u(coords) \n",
     "    dydt = polynomial_v(coords)\n",
     "    dxdt=np.array(dxdt).reshape(-1, 1)\n",
@@ -96,58 +153,7 @@
     "    result = np.concatenate((dxdt, dydt), axis=1)\n",
     "\n",
     "\n",
-    "    return result\n",
-    "\n",
-    "def funconc(t, y):\n",
-    "    #concentrations of the form np.ones((6, 1))\n",
-    "    #-c (du/dx + dv/dy) = result\n",
-    "    c = y\n",
-    "    xcoords = positions_over_time[t][:, 0]\n",
-    "    xcoords = np.array(xcoords).reshape(-1, 1)\n",
-    "    ycoords = positions_over_time[t][:, 1]\n",
-    "    ycoords = np.array(xcoords).reshape(-1, 1)\n",
-    "    timecoords = t*np.ones(num_particles)\n",
-    "    coords = np.array([np.array(timecoords).reshape(-1, 1), xcoords, ycoords])\n",
-    "\n",
-    "    dudx = polynomial_du(coords)\n",
-    "    dvdy = polynomial_dv(coords)\n",
-    "    result = -1*c*(dudx + dvdy)\n",
-    "    return result\n",
-    "\n",
-    "\n",
-    "def vector_rk4(f, y0, t):\n",
-    "    #y0 will be of shape num_particles(N) x 2, same for all k values \n",
-    "    #t = [dt, 2dt, 3dt,...]\n",
-    "    #f takes a scalar t[i] and a N x 2 array\n",
-    "    n = len(t)\n",
-    "    #y = np.zeros((n, len(y0))) #this is positions_over_time\n",
-    "    y = positions_over_time\n",
-    "    #y[0] = y0 #we have already set the firstvalue\n",
-    "    for i in range(n - 1):\n",
-    "        h = t[i+1] - t[i]\n",
-    "        k1 = f(t[i], y[i])\n",
-    "        k2 = f(t[i] + 0.5*h, y[i] + 0.5*h*k1)\n",
-    "        k3 = f(t[i] + 0.5*h, y[i] + 0.5*h*k2)\n",
-    "        k4 = f(t[i+1], y[i] + h*k3)\n",
-    "        y[i+1] = y[i] + (h/6)*(k1 + 2*k2 + 2*k3 + k4)\n",
-    "    return y\n",
-    "\n",
-    "def vector_rk4_conc(f, y0, t):\n",
-    "    #y0 will be of shape num_particles(N) x 2, same for all k values \n",
-    "    #t = [dt, 2dt, 3dt,...]\n",
-    "    #f takes a scalar t[i] and a N x 2 array\n",
-    "    n = len(t)\n",
-    "    #y = np.zeros((n, len(y0))) #this is positions_over_time\n",
-    "    y = concentrations_over_time\n",
-    "    #y[0] = y0 #we have already set the firstvalue\n",
-    "    for i in range(n - 1):\n",
-    "        h = t[i+1] - t[i]\n",
-    "        k1 = f(t[i], y[i])\n",
-    "        k2 = f(t[i] + 0.5*h, y[i] + 0.5*h*k1)\n",
-    "        k3 = f(t[i] + 0.5*h, y[i] + 0.5*h*k2)\n",
-    "        k4 = f(t[i+1], y[i] + h*k3)\n",
-    "        y[i+1] = y[i] + (h/6)*(k1 + 2*k2 + 2*k3 + k4)\n",
-    "    return y"
+    "    return result"
    ]
   }
  ],
