--- a/lagrangian_integrator/new_lagrangian_integrator.ipynb
+++ b/lagrangian_integrator/new_lagrangian_integrator.ipynb
@@ -155,6 +155,185 @@
     "\n",
     "    return result"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np \n",
+    "from scipy.interpolate import RegularGridInterpolator\n",
+    "from scipy.integrate import solve_ivp\n",
+    "\n",
+    "def integrate_particles(positions, concentrations, velocity_field, X, Y, dt, num_steps, L):\n",
+    "    #positions is of the form np.ones((6, 2)), concentrations of the form np.ones((6, 1))\n",
+    "    num_particles = len(positions)\n",
+    "    positions_over_time = np.zeros((num_steps+1, num_particles, 2))  #positions_over_time[0] gives positions at t=0, right shape checked!\n",
+    "    concentrations_over_time = np.zeros((num_steps+1, num_particles, 1))\n",
+    "    positions_over_time[0] = positions\n",
+    "    #print(positions_over_time) still correct shape!\n",
+    "    concentrations_over_time[0] = concentrations\n",
+    "\n",
+    "    u, v = get_matrix_u(velocity_field), get_matrix_v(velocity_field)\n",
+    "    polynomial_u, polynomial_v = interpolate(u), interpolate(v)\n",
+    "    #print(positions_over_time) still correct shape!\n",
+    "    t_span = (0, num_steps * dt)\n",
+    "    t_eval = [i * dt for i in range(num_steps+1)]\n",
+    "    #y0 = [ [positions[i][0], positions[i][1]] for i in range(num_particles)]\n",
+    "    t = [i*dt for i in range(num_steps+1)]\n",
+    "    y0 = positions\n",
+    "    #print(positions_over_time) still correct shape\n",
+    "    vector_rk4(fun, y0, t, polynomial_u, polynomial_v, positions_over_time)\n",
+    "    #concentration starts here\n",
+    "    du, dv = get_matrix_du(u), get_matrix_dv(v)\n",
+    "    polynomial_du, polynomial_dv = interpolate(du), interpolate(dv)\n",
+    "    vector_rk4_conc(funconc, concentrations_over_time, t, polynomial_du, polynomial_dv)\n",
+    "\n",
+    "    return positions_over_time, concentrations_over_time\n",
+    "\n",
+    "\n",
+    "def get_matrix_u(velocity_field):\n",
+    "    umatrix = velocity_field\n",
+    "    nt, nx, ny = velocity_field.shape\n",
+    "    for i in range(nt):\n",
+    "        umatrix[i] = np.gradient(velocity_field[i], axis=1) * -1\n",
+    "    return umatrix\n",
+    "\n",
+    "def get_matrix_v(velocity_field):\n",
+    "    vmatrix = velocity_field\n",
+    "    nt, nx, ny = velocity_field.shape\n",
+    "    for i in range(nt):\n",
+    "        vmatrix[i] = np.gradient(velocity_field[i], axis=0) \n",
+    "    return vmatrix\n",
+    "\n",
+    "def get_matrix_du(umatrix):\n",
+    "    dumatrix = umatrix\n",
+    "    nt, nx, ny = umatrix.shape\n",
+    "    for i in range(nt):\n",
+    "        dumatrix[i] = np.gradient(umatrix[i], axis=0) \n",
+    "    return dumatrix\n",
+    "\n",
+    "def get_matrix_dv(umatrix):\n",
+    "    dumatrix = umatrix\n",
+    "    nt, nx, ny = umatrix.shape\n",
+    "    for i in range(nt):\n",
+    "        dumatrix[i] = np.gradient(umatrix[i], axis=1) \n",
+    "    return dumatrix\n",
+    "\n",
+    "def interpolate(umatrix):\n",
+    "\n",
+    "    t = umatrix.shape[0]\n",
+    "    time = [i for i in range(t)]\n",
+    "\n",
+    "    interpolator = RegularGridInterpolator((time, X, Y), umatrix, method = \"cubic\")\n",
+    "\n",
+    "    return interpolator\n",
+    "\n",
+    "def vector_rk4(f, y0, t, polynomial_u, polynomial_v, positions_over_time):\n",
+    "    #y0 will be of shape num_particles(N) x 2, same for all k values \n",
+    "    #t = [dt, 2dt, 3dt,...]\n",
+    "    #f takes a scalar t[i] and a N x 2 array\n",
+    "    n = len(t)\n",
+    "    #y = np.zeros((n, len(y0))) #this is positions_over_time\n",
+    "    y = positions_over_time\n",
+    "    #print(y)\n",
+    "    #print(\"positions above should be 5\")\n",
+    "    #y[0] = y0 #we have already set the firstvalue\n",
+    "\n",
+    "    #testing\n",
+    "    #print(t)\n",
+    "    #print(n)\n",
+    "    #print(y)\n",
+    "    #testing\n",
+    "\n",
+    "    for i in range(n - 1):\n",
+    "        h = t[i+1] - t[i]\n",
+    "        k1 = f(t[i], y[i], polynomial_u, polynomial_v)\n",
+    "        k2 = f(t[i] + 0.5*h, y[i] + 0.5*h*k1, polynomial_u, polynomial_v)\n",
+    "        k3 = f(t[i] + 0.5*h, y[i] + 0.5*h*k2, polynomial_u, polynomial_v)\n",
+    "        k4 = f(t[i+1], y[i] + h*k3, polynomial_u, polynomial_v)\n",
+    "        y[i+1] = y[i] + (h/6)*(k1 + 2*k2 + 2*k3 + k4)\n",
+    "    return y\n",
+    "\n",
+    "def fun(t, y, polynomial_u, polynomial_v):\n",
+    "    #note that here y refers to both x and y coords\n",
+    "    #print(y)\n",
+    "    #print(2*L)\n",
+    "    #print([(sublist[0]+L)% (2*L) -L for sublist in y] )\n",
+    "    #print(y)\n",
+    "    #print(\" y above\")\n",
+    "    xlist = [(sublist[0]+L)% (2*L) -L for sublist in y] \n",
+    "    ylist = [(sublist[1]+L)% (2*L) -L for sublist in y] \n",
+    "    #print(np.array(xlist).reshape(-1, 1))\n",
+    "    #print(t*np.ones(num_particles))\n",
+    "    timecoords = t*np.ones(num_particles)\n",
+    "    #print(xlist)\n",
+    "    #coords = [timecoords, xlist, ylist]\n",
+    "    coords = [[x, y, z] for x, y, z in zip(timecoords, xlist, ylist)]\n",
+    "    #print(coords)\n",
+    "    #a=[[0,1,2],[0,1,2],[0,1,2], [0,1,2]]\n",
+    "    #print(a)\n",
+    "    #print(polynomial_u(a))\n",
+    "    #print(coords)\n",
+    "    #print(polynomial_u(coords))\n",
+    "    dxdt = polynomial_u(coords) \n",
+    "    dydt = polynomial_v(coords)\n",
+    "    dxdt=np.array(dxdt).reshape(-1, 1)\n",
+    "    dydt=np.array(dydt).reshape(-1, 1)\n",
+    " \n",
+    "\n",
+    "    result = np.concatenate((dxdt, dydt), axis=1)\n",
+    "    #print(result)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "def vector_rk4_conc(f, y, t, polynomial_du, polynomial_dv):\n",
+    "    n = len(t)\n",
+    "    #print(y)\n",
+    "    #print(\"concentrations over time above should be 4+1\") fixed\n",
+    "    #y[0] = y0 #we have already set the firstvalue\n",
+    "    for i in range(n - 1):\n",
+    "        h = t[i+1] - t[i]\n",
+    "        k1 = f(t[i], y[i], polynomial_du, polynomial_dv)\n",
+    "        #testing\n",
+    "        print(t[i] + 0.5*h, y[i] + 0.5*h*k1)\n",
+    "        #testing\n",
+    "        k2 = f(t[i] + 0.5*h, y[i] + 0.5*h*k1, polynomial_du, polynomial_dv)\n",
+    "        k3 = f(t[i] + 0.5*h, y[i] + 0.5*h*k2, polynomial_du, polynomial_dv)\n",
+    "        k4 = f(t[i+1], y[i] + h*k3, polynomial_du, polynomial_dv)\n",
+    "        y[i+1] = y[i] + (h/6)*(k1 + 2*k2 + 2*k3 + k4)\n",
+    "    return y\n",
+    "\n",
+    "def funconc(t, y, polynomial_du, polynomial_dv):\n",
+    "    #concentrations of the form np.ones((6, 1))\n",
+    "    #-c (du/dx + dv/dy) = result\n",
+    "    #print(y)\n",
+    "    c = y\n",
+    "    #print(positions_over_time[t])#t = 0.5 at that time so need something else of course!\n",
+    "    #xcoords = positions_over_time[t][:, 0]\n",
+    "    #print(xcoords) \n",
+    "    #xcoords = np.array(xcoords).reshape(-1, 1)\n",
+    "    #ycoords = positions_over_time[t][:, 1]\n",
+    "    #ycoords = np.array(xcoords).reshape(-1, 1)\n",
+    "    #get x and y coords at time t\n",
+    "    timecoords = t*np.ones(num_particles)\n",
+    "    #print(timecoords)\n",
+    "    coords = [[x, y, z] for x, y, z in zip(timecoords, xcoords, ycoords)]\n",
+    "    #print(c)\n",
+    "    #print(\"c is above\") works until here\n",
+    "    dudx = polynomial_du(coords)\n",
+    "    #print(dudx)\n",
+    "    #print(\"dudx above\")\n",
+    "    dvdy = polynomial_dv(coords)\n",
+    "    #print(dvdy)\n",
+    "    #print(dvdy+dudx)\n",
+    "    column=np.array(dvdy+dudx).reshape(-1, 1)\n",
+    "    #print(column)\n",
+    "    result = -1*c*(column)\n",
+    "    #print(result)\n",
+    "    return result"
+   ]
   }
  ],
  "metadata": {
