--- a/lagrangian_integrator/new_lagrangian_integrator.ipynb
+++ b/lagrangian_integrator/new_lagrangian_integrator.ipynb
@@ -2,12 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np \n",
@@ -21,10 +17,16 @@
     "    positions_over_time[0] = positions\n",
     "    #print(positions_over_time) still correct shape!\n",
     "    concentrations_over_time[0] = concentrations\n",
-    "\n",
-    "    u, v = get_matrix_u(velocity_field), get_matrix_v(velocity_field)\n",
+    "    #print(velocity_field)\n",
+    "    u = get_matrix_u(velocity_field)\n",
+    "    #print(velocity_field[0])\n",
+    "    v = get_matrix_v(velocity_field)\n",
+    "    #print(velocity_field[0])\n",
+    "    #print(\"'end\")\n",
+    "    #print(v[0])\n",
     "    polynomial_u, polynomial_v = interpolate(u), interpolate(v)\n",
     "    #print(positions_over_time) still correct shape!\n",
+    "    #print(polynomial_u([0,1,2]))\n",
     "    t_span = (0, num_steps * dt)\n",
     "    t_eval = [i * dt for i in range(num_steps+1)]\n",
     "    #y0 = [ [positions[i][0], positions[i][1]] for i in range(num_particles)]\n",
@@ -33,46 +35,50 @@
     "\n",
     "    du, dv = get_matrix_du(u), get_matrix_dv(v)\n",
     "    polynomial_du, polynomial_dv = interpolate(du), interpolate(dv) \n",
-    "    new_vector_rk4(fun, t, polynomial_u, polynomial_v, positions_over_time, polynomial_du, polynomial_dv, concentrations_over_time, num_particles)\n",
+    "    answer = new_vector_rk4(fun, t, polynomial_u, polynomial_v, positions_over_time, polynomial_du, polynomial_dv, concentrations_over_time, num_particles)\n",
+    "    return answer\n",
     "\n",
-    "    return positions_over_time, concentrations_over_time\n",
     "\n",
-    "\n",
-    "def get_matrix_u(velocity_field):\n",
-    "    umatrix = velocity_field\n",
-    "    nt, nx, ny = velocity_field.shape\n",
+    "def get_matrix_u(original_matrix):\n",
+    "    #print(original_matrix)\n",
+    "    \n",
+    "    nt, nx, ny = original_matrix.shape\n",
+    "    umatrix = np.copy(original_matrix)\n",
+    "    #umatrix = original_matrix\n",
     "    for i in range(nt):\n",
-    "        umatrix[i] = np.gradient(velocity_field[i], axis=1) * -1\n",
+    "        umatrix[i] = np.gradient(original_matrix[i], axis=1) * -1\n",
+    "    #print(\"2\")\n",
+    "    #print(umatrix)\n",
+    "    #print(original_matrix)\n",
     "    return umatrix\n",
     "\n",
-    "def get_matrix_v(velocity_field):\n",
-    "    vmatrix = velocity_field\n",
-    "    nt, nx, ny = velocity_field.shape\n",
+    "def get_matrix_v(original_matrix):\n",
+    "    #print(original_matrix)\n",
+    "    vmatrix = np.copy(original_matrix)\n",
+    "    nt, nx, ny = original_matrix.shape\n",
     "    for i in range(nt):\n",
-    "        vmatrix[i] = np.gradient(velocity_field[i], axis=0) \n",
+    "        vmatrix[i] = np.gradient(original_matrix[i], axis=0) \n",
     "    return vmatrix\n",
     "\n",
-    "def get_matrix_du(umatrix):\n",
-    "    dumatrix = umatrix\n",
-    "    nt, nx, ny = umatrix.shape\n",
+    "def get_matrix_du(original_matrix):\n",
+    "    dumatrix = np.copy(original_matrix)\n",
+    "    nt, nx, ny = original_matrix.shape\n",
     "    for i in range(nt):\n",
-    "        dumatrix[i] = np.gradient(umatrix[i], axis=0) \n",
+    "        dumatrix[i] = np.gradient(original_matrix[i], axis=0) \n",
     "    return dumatrix\n",
     "\n",
-    "def get_matrix_dv(umatrix):\n",
-    "    dumatrix = umatrix\n",
-    "    nt, nx, ny = umatrix.shape\n",
+    "def get_matrix_dv(original_matrix):\n",
+    "    dumatrix = np.copy(original_matrix)\n",
+    "    nt, nx, ny = original_matrix.shape\n",
     "    for i in range(nt):\n",
-    "        dumatrix[i] = np.gradient(umatrix[i], axis=1) \n",
+    "        dumatrix[i] = np.gradient(original_matrix[i], axis=1) \n",
     "    return dumatrix\n",
     "\n",
     "def interpolate(umatrix):\n",
     "\n",
     "    t = umatrix.shape[0]\n",
     "    time = [i for i in range(t)]\n",
-    "\n",
     "    interpolator = RegularGridInterpolator((time, X, Y), umatrix, method = \"cubic\")\n",
-    "\n",
     "    return interpolator\n",
     "\n",
     "def new_vector_rk4(f, t, polynomial_u, polynomial_v, positions_over_time, polynomial_du, polynomial_dv, concentrations_over_time, num_particles):\n",
@@ -101,7 +107,14 @@
     "    #now all coords are in row format [1,2,3,etc...]\n",
     "    #now create the txy coords\n",
     "    coords = [[x, y, z] for x, y, z in zip(timecoords, xlist, ylist)]\n",
+    "\n",
+    "    #testing\n",
+    "    #print(xlist)\n",
+    "    #print(coords)\n",
+    "    #testing\n",
+    "\n",
     "    #we want to generate dx/dt dy/dt and dc/dt and the concatenate them\n",
+    "    #print(coords)\n",
     "    dxdt = polynomial_u(coords) \n",
     "    dydt = polynomial_v(coords)\n",
     "    #make columns\n",
@@ -122,13 +135,36 @@
     "\n",
     "    result = np.concatenate((dxdt, dydt), axis=1)\n",
     "    result = np.concatenate((result, dcdt), axis=1)\n",
-    "    return result"
+    "    #print(result)\n",
+    "    return result\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
