--- a/lagrangian_integrator/new_lagrangian_integrator.ipynb
+++ b/lagrangian_integrator/new_lagrangian_integrator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,6 +138,76 @@
     "    #print(result)\n",
     "    return result\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "positions = np.ones((6, 2))\n",
+    "concentrations = np.ones((6, 1))\n",
+    "#print(concentrations)\n",
+    "X = [0, 1, 2, 3, 4, 5, 6]\n",
+    "Y = X\n",
+    "dt=0.0001\n",
+    "num_steps=4\n",
+    "L=100\n",
+    "velocity_field = np.arange(7**3).reshape((7, 7, 7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1.    , 1.    , 1.    ],\n",
+       "        [1.    , 1.    , 1.    ],\n",
+       "        [1.    , 1.    , 1.    ],\n",
+       "        [1.    , 1.    , 1.    ],\n",
+       "        [1.    , 1.    , 1.    ],\n",
+       "        [1.    , 1.    , 1.    ]],\n",
+       "\n",
+       "       [[0.9999, 1.0007, 1.    ],\n",
+       "        [0.9999, 1.0007, 1.    ],\n",
+       "        [0.9999, 1.0007, 1.    ],\n",
+       "        [0.9999, 1.0007, 1.    ],\n",
+       "        [0.9999, 1.0007, 1.    ],\n",
+       "        [0.9999, 1.0007, 1.    ]],\n",
+       "\n",
+       "       [[0.9998, 1.0014, 1.    ],\n",
+       "        [0.9998, 1.0014, 1.    ],\n",
+       "        [0.9998, 1.0014, 1.    ],\n",
+       "        [0.9998, 1.0014, 1.    ],\n",
+       "        [0.9998, 1.0014, 1.    ],\n",
+       "        [0.9998, 1.0014, 1.    ]],\n",
+       "\n",
+       "       [[0.9997, 1.0021, 1.    ],\n",
+       "        [0.9997, 1.0021, 1.    ],\n",
+       "        [0.9997, 1.0021, 1.    ],\n",
+       "        [0.9997, 1.0021, 1.    ],\n",
+       "        [0.9997, 1.0021, 1.    ],\n",
+       "        [0.9997, 1.0021, 1.    ]],\n",
+       "\n",
+       "       [[0.9996, 1.0028, 1.    ],\n",
+       "        [0.9996, 1.0028, 1.    ],\n",
+       "        [0.9996, 1.0028, 1.    ],\n",
+       "        [0.9996, 1.0028, 1.    ],\n",
+       "        [0.9996, 1.0028, 1.    ],\n",
+       "        [0.9996, 1.0028, 1.    ]]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "integrate_particles(positions, concentrations, velocity_field, X, Y, dt, num_steps, L)"
    ]
   },
   {
