--- a/lagrangian_integrator/new_lagrangian_integrator.ipynb
+++ b/lagrangian_integrator/new_lagrangian_integrator.ipynb
@@ -215,7 +215,162 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mport numpy as np \n",
+    "from scipy.interpolate import RegularGridInterpolator\n",
+    "\n",
+    "def integrate_particles(positions, concentrations, velocity_field, X, Y, dt, num_steps, L, phase_field):\n",
+    "    #positions is of the form np.ones((6, 2)), concentrations of the form np.ones((6, 1))\n",
+    "    num_particles = len(positions)\n",
+    "    positions_over_time = np.zeros((num_steps+1, num_particles, 2))  #positions_over_time[0] gives positions at t=0, right shape checked!\n",
+    "    concentrations_over_time = np.zeros((num_steps+1, num_particles, 1))\n",
+    "    positions_over_time[0] = positions\n",
+    "    #print(positions_over_time) still correct shape!\n",
+    "    concentrations_over_time[0] = concentrations\n",
+    "    #print(velocity_field)\n",
+    "    u = get_matrix_u(velocity_field)\n",
+    "    #print(velocity_field[0])\n",
+    "    v = get_matrix_v(velocity_field)\n",
+    "    #print(velocity_field[0])\n",
+    "    u_two, v_two = get_matrix_u_two(phase_field), get_matrix_v_two(phase_field)\n",
+    "    #print(\"'end\")\n",
+    "    #print(v[0])\n",
+    "    polynomial_u, polynomial_v = interpolate(u), interpolate(v)\n",
+    "    polynomial_u_two, polynomial_v_two = interpolate(u_two), interpolate(v_two)\n",
+    "    #print(positions_over_time) still correct shape!\n",
+    "    #print(polynomial_u([0,1,2]))\n",
+    "    t_span = (0, num_steps * dt)\n",
+    "    t_eval = [i * dt for i in range(num_steps+1)]\n",
+    "    #y0 = [ [positions[i][0], positions[i][1]] for i in range(num_particles)]\n",
+    "    t = [i*dt for i in range(num_steps+1)]\n",
+    "    #y0 = positions\n",
+    "\n",
+    "    du, dv = get_matrix_du(u), get_matrix_dv(v)\n",
+    "    polynomial_du, polynomial_dv = interpolate(du), interpolate(dv) \n",
+    "    answer = new_vector_rk4(fun, t, polynomial_u, polynomial_v, positions_over_time, polynomial_du, polynomial_dv, concentrations_over_time, num_particles, polynomial_u_two, polynomial_v_two)\n",
+    "    return answer\n",
+    "\n",
+    "def get_matrix_u_two(original_matrix):\n",
+    "    nt, nx, ny = original_matrix.shape\n",
+    "    umatrix = np.copy(original_matrix)\n",
+    "    #umatrix = original_matrix\n",
+    "    for i in range(nt):\n",
+    "        umatrix[i] = np.gradient(original_matrix[i], axis=0) \n",
+    "    #print(\"2\")\n",
+    "    #print(umatrix)\n",
+    "    #print(original_matrix)\n",
+    "    return umatrix\n",
+    "\n",
+    "def get_matrix_v_two(original_matrix):\n",
+    "    nt, nx, ny = original_matrix.shape\n",
+    "    umatrix = np.copy(original_matrix)\n",
+    "    #umatrix = original_matrix\n",
+    "    for i in range(nt):\n",
+    "        umatrix[i] = np.gradient(original_matrix[i], axis=1) \n",
+    "    #print(\"2\")\n",
+    "    #print(umatrix)\n",
+    "    #print(original_matrix)\n",
+    "    return umatrix\n",
+    "\n",
+    "def get_matrix_u(original_matrix):\n",
+    "    #print(original_matrix)\n",
+    "    \n",
+    "    nt, nx, ny = original_matrix.shape\n",
+    "    umatrix = np.copy(original_matrix)\n",
+    "    #umatrix = original_matrix\n",
+    "    for i in range(nt):\n",
+    "        umatrix[i] = np.gradient(original_matrix[i], axis=1) * -1\n",
+    "    #print(\"2\")\n",
+    "    #print(umatrix)\n",
+    "    #print(original_matrix)\n",
+    "    return umatrix\n",
+    "\n",
+    "def get_matrix_v(original_matrix):\n",
+    "    #print(original_matrix)\n",
+    "    vmatrix = np.copy(original_matrix)\n",
+    "    nt, nx, ny = original_matrix.shape\n",
+    "    for i in range(nt):\n",
+    "        vmatrix[i] = np.gradient(original_matrix[i], axis=0) \n",
+    "    return vmatrix\n",
+    "\n",
+    "def get_matrix_du(original_matrix):\n",
+    "    dumatrix = np.copy(original_matrix)\n",
+    "    nt, nx, ny = original_matrix.shape\n",
+    "    for i in range(nt):\n",
+    "        dumatrix[i] = np.gradient(original_matrix[i], axis=0) \n",
+    "    return dumatrix\n",
+    "\n",
+    "def get_matrix_dv(original_matrix):\n",
+    "    dumatrix = np.copy(original_matrix)\n",
+    "    nt, nx, ny = original_matrix.shape\n",
+    "    for i in range(nt):\n",
+    "        dumatrix[i] = np.gradient(original_matrix[i], axis=1) \n",
+    "    return dumatrix\n",
+    "\n",
+    "def interpolate(umatrix):\n",
+    "\n",
+    "    t = umatrix.shape[0]\n",
+    "    time = [i for i in range(t)]\n",
+    "    interpolator = RegularGridInterpolator((time, X, Y), umatrix, method = \"cubic\")\n",
+    "    return interpolator\n",
+    "\n",
+    "def new_vector_rk4(f, t, polynomial_u, polynomial_v, positions_over_time, polynomial_du, polynomial_dv, concentrations_over_time, num_particles, polynomial_u_two, polynomial_v_two):\n",
+    "    #y0 will be of shape num_particles(N) x 2, same for all k values \n",
+    "    #t = [dt, 2dt, 3dt,...]\n",
+    "    #f takes a scalar t[i] and a N x 2 array\n",
+    "    n = len(t)\n",
+    "    y = np.concatenate((positions_over_time, concentrations_over_time), axis=2)\n",
+    "\n",
+    "    for i in range(n - 1):\n",
+    "        h = t[i+1] - t[i]\n",
+    "        k1 = f(t[i], y[i], polynomial_u, polynomial_v, polynomial_du, polynomial_dv, num_particles, polynomial_u_two, polynomial_v_two)\n",
+    "        k2 = f(t[i] + 0.5*h, y[i] + 0.5*h*k1, polynomial_u, polynomial_v, polynomial_du, polynomial_dv, num_particles, polynomial_u_two, polynomial_v_two)\n",
+    "        k3 = f(t[i] + 0.5*h, y[i] + 0.5*h*k2, polynomial_u, polynomial_v, polynomial_du, polynomial_dv, num_particles, polynomial_u_two, polynomial_v_two)\n",
+    "        k4 = f(t[i+1], y[i] + h*k3, polynomial_u, polynomial_v, polynomial_du, polynomial_dv, num_particles, polynomial_u_two, polynomial_v_two)\n",
+    "        y[i+1] = y[i] + (h/6)*(k1 + 2*k2 + 2*k3 + k4)\n",
+    "    return y\n",
+    "\n",
+    "def fun(t, y, polynomial_u, polynomial_v, polynomial_du, polynomial_dv, num_particles, polynomial_u_two, polynomial_v_two):\n",
+    "    #this function should give us the change in position and change in velocity\n",
+    "\n",
+    "    xlist = [(i+L)% (2*L) -L for i in y[:, 0]] \n",
+    "    ylist = [(i+L)% (2*L) -L for i in y[:, 1]] \n",
+    "    conclist = [(i+L)% (2*L) -L for i in y[:, 2]] \n",
+    "    timecoords = t*np.ones(num_particles)\n",
+    "    #now all coords are in row format [1,2,3,etc...]\n",
+    "    #now create the txy coords\n",
+    "    coords = [[x, y, z] for x, y, z in zip(timecoords, xlist, ylist)]\n",
+    "\n",
+    "    #testing\n",
+    "    #print(xlist)\n",
+    "    #print(coords)\n",
+    "    #testing\n",
+    "\n",
+    "    #we want to generate dx/dt dy/dt and dc/dt and the concatenate them\n",
+    "    #print(coords)\n",
+    "    dxdt = polynomial_u(coords) + polynomial_u_two(coords)\n",
+    "    dydt = polynomial_v(coords) + polynomial_v_two(coords)\n",
+    "    #make columns\n",
+    "    dxdt = np.array(dxdt).reshape(-1, 1)\n",
+    "    dydt = np.array(dydt).reshape(-1, 1)\n",
+    "\n",
+    "    dudx = polynomial_du(coords) + polynomial_u_two(coords)\n",
+    "    dvdy = polynomial_dv(coords) + polynomial_v_two(coords)\n",
+    "    column = np.array(dvdy+dudx).reshape(-1, 1)\n",
+    "    c = np.array(conclist).reshape(-1, 1)\n",
+    "    dcdt = -1*c*(column)\n",
+    "    #now all derivatives are columns so we concatenate them\n",
+    "\n",
+    "    #testing\n",
+    "    #print(dxdt)\n",
+    "    #print(dydt)\n",
+    "    #testing\n",
+    "\n",
+    "    result = np.concatenate((dxdt, dydt), axis=1)\n",
+    "    result = np.concatenate((result, dcdt), axis=1)\n",
+    "    #print(result)\n",
+    "    return result\n"
+   ]
   }
  ],
  "metadata": {
