--- a/lagrangian_integrator/final_version_integrator.ipynb
+++ b/lagrangian_integrator/final_version_integrator.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "def new_vector_rk4(f, t, polynomial_u, polynomial_v, positions_over_time, polynomial_du, polynomial_dv, concentrations_over_time, num_particles):\n",
     "    n = len(t)\n",
-    "    y = np.concatenate((positions_over_time, concentrations_over_time), axis=2)\n",
+    "    y = np.mod(np.concatenate((positions_over_time, concentrations_over_time), axis=2), L)\n",
     "\n",
     "    for i in range(n - 1):\n",
     "        h = t[i+1] - t[i]\n",
@@ -58,8 +58,8 @@
     "        k2 = f(t[i] + 0.5*h, y[i] + 0.5*h*k1, polynomial_u, polynomial_v, polynomial_du, polynomial_dv, num_particles)\n",
     "        k3 = f(t[i] + 0.5*h, y[i] + 0.5*h*k2, polynomial_u, polynomial_v, polynomial_du, polynomial_dv, num_particles)\n",
     "        k4 = f(t[i+1], y[i] + h*k3, polynomial_u, polynomial_v, polynomial_du, polynomial_dv, num_particles)\n",
-    "        y[i+1] = y[i] + (h/6)*(k1 + 2*k2 + 2*k3 + k4)\n",
-    "    return np.mod(y, L)\n",
+    "        y[i+1] = np.mod(y[i] + (h/6)*(k1 + 2*k2 + 2*k3 + k4), L)\n",
+    "    return y\n",
     "\n",
     "def fun(t, y, polynomial_u, polynomial_v, polynomial_du, polynomial_dv, num_particles):\n",
     "    xlist, ylist, conclist = [(i+L)% (2*L) -L for i in y[:, 0]], [(i+L)% (2*L) -L for i in y[:, 1]], [(i+L)% (2*L) -L for i in y[:, 2]] \n",
