--- a/lagrangian_integrator/testingthree.ipynb
+++ b/lagrangian_integrator/testingthree.ipynb
@@ -48,8 +48,6 @@
     "\n",
     "    t = matr.shape[0]\n",
     "    time = [i*r for i in range(t)]\n",
-    "    #print(\"time below\")\n",
-    "    #print(time) \n",
     "    interpolator = RegularGridInterpolator((time, X, Y), np.real(matr), method = \"cubic\")\n",
     "    return interpolator\n",
     "\n",
@@ -61,16 +59,16 @@
     "        k2 = f(t[i] + 0.5*h, (y[i] + 0.5*h*k1), num_particles, polynomial_u, polynomial_v, polynomial_c)\n",
     "        k3 = f(t[i] + 0.5*h, (y[i] + 0.5*h*k2), num_particles, polynomial_u, polynomial_v, polynomial_c)\n",
     "        k4 = f(t[i+1], (y[i] + h*k3), num_particles, polynomial_u, polynomial_v, polynomial_c)\n",
-    "        y[i+1] = moduloL(y[i] + (h/6)*(k1 + 2*k2 + 2*k3 + k4)) #remove moduloL to get the real trajectories, keep it for pseudo\n",
+    "        y[i+1] = y[i] + (h/6)*(k1 + 2*k2 + 2*k3 + k4) #remove moduloL to get the real trajectories, keep it for pseudo\n",
     "    #print(\"h below\")\n",
     "    #print(h)\n",
     "    return y\n",
     "\n",
     "def moduloL(y):\n",
     "    L =  np.pi\n",
-    "    for i in range(len(y)): #do for each particle, len(y[0]) = number of particles\n",
+    "    for i in range(len(y)): \n",
     "        y[i,0] = np.mod(y[i,0] + L, 2 * L) - L\n",
-    "        y[i,1] = np.mod(y[i,0] + L, 2 * L) - L\n",
+    "        y[i,1] = np.mod(y[i,1] + L, 2 * L) - L\n",
     "    return y\n",
     "\n",
     "def fun(t,y, num_particles, polynomial_u, polynomial_v, polynomial_c):\n",
@@ -85,9 +83,9 @@
     "    resultone = np.concatenate((dxdt, dydt), axis=1)\n",
     "\n",
     "    c = np.array(clist).reshape(-1,1)\n",
-    "    #dcdt = -c * np.array(polynomial_c(coords)).reshape(-1, 1)\n",
+    "    dcdt = -c * np.array(polynomial_c(coords)).reshape(-1, 1)\n",
     "\n",
-    "    dcdt = 0 * np.array(polynomial_c(coords)).reshape(-1, 1)\n",
+    "    #dcdt = 0 * np.array(polynomial_c(coords)).reshape(-1, 1)\n",
     "\n",
     "    result = np.concatenate((resultone, dcdt), axis=1)\n",
     "    return result\n",
